Forces (for real this time) compiling of shared project

--- a/sbt-plugins/sbt-shared-ui/example/ui1/src/main/assets/less/main.less
+++ b/sbt-plugins/sbt-shared-ui/example/ui1/src/main/assets/less/main.less
@@ -1,4 +1,6 @@
-@bg-color: blue;
+@import "../../../../target/public/foo/less/colors.less";
+
+@bg-color: yellow;
 
 body {
   background-color: @bg-color;
