Remove namespacing in favor of package conventions

--- a/sbt-plugins/sbt-shared-ui/example/ui1/src/main/assets/ui1/less/main.less
+++ b/sbt-plugins/sbt-shared-ui/example/ui1/src/main/assets/ui1/less/main.less
@@ -1,4 +1,4 @@
-@import "../../../../target/public/foo/less/shared.less";
+@import "../../../../../target/public/shared/less/shared.less";
 
 @bg-color: yellow;
 
